# py-social-network

./: README.md  Schema.excalidraw  docker-compose.yml  todo.txt
social-network-api/: Dockerfile  pyproject.toml
social-network-api/src/: main.py
social-network-api/src/infraestructure/: queue_publisher.py
social-network-api/src/model/: user_relationship.py
social-network-api/src/services/: follower_service.py  post_service.py
social-network-consumer/: Dockerfile  pyproject.toml
social-network-consumer/src/: listener.py  main.py  thread_listener.py
tools/: social_network.postman_collection.json
