[tool.poetry]
name = "social-network-api"
version = "0.1.0"
description = ""
authors = ["Leandro Valido <leandro.valido@fravega.com.ar>"]
readme = "README.md"
packages = [{include = "social_network_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.91.0"
pika = "^1.3.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
