[tool.poetry]
name = "social-network-consumer"
version = "0.1.0"
description = ""
authors = ["Leandro Valido"]
readme = "README.md"
packages = [{include = "social_network_consumer"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
